# taotao-agent

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
.taotao/: hooks.json  permissions.json
.well-known/: security.txt
backend/: .dockerignore  .env.example  Dockerfile  app.py  mcp_servers.example.json  pyproject.toml  taotao_cli.py
backend/agent/: __init__.py  config.py  graph.py  hooks.py  models_catalog.py  permissions.py  project_context.py  quota.py  security.py  slash_commands.py  state.py
backend/agent/auth/: __init__.py  identity.py
backend/agent/billing/: __init__.py  models.py  plans.py  stripe_client.py
backend/agent/harness/: __init__.py  compaction.py  loop.py  persistence.py  prompt.py  subagent.py  tools.py
backend/agent/mcp/: __init__.py  __main__.py  client.py  server.py
backend/agent/memory/: __init__.py  long_term.py  profile.py  reflections.py  short_term.py  skills.py
backend/agent/multi_agent/: __init__.py  debate.py  handoff.py  reflection.py  types.py  voting.py
backend/agent/nodes/: __init__.py  critic.py  executor.py  extractor.py  guardrails.py  llm.py  perception.py  planner.py  summarizer.py  supervisor.py
backend/agent/observability/: __init__.py  logging_setup.py  telemetry.py  tracer.py  usage.py
backend/agent/subagents/: __init__.py  loader.py
backend/agent/tools/: __init__.py  _sandbox.py  calculator.py  current_time.py  file_ops.py  memory_tool.py  multi_agent_tool.py  profile_tool.py  propose_edit.py  python_repl.py  read_tool_result.py  registry.py  router.py  safe_exec.py  skills_tool.py  web_search.py
backend/data/skills/: code-task.md  concise-answers.md  video-moderation.md  web-research.md
backend/eval/: __init__.py  cases.py  cli.py  judge.py  report.py  runner.py
backend/eval/golden/: code.jsonl  math.jsonl  memory.jsonl  search.jsonl
backend/routers/: __init__.py  admin.py  billing.py  chat.py  memory.py  meta.py  observability.py  shared.py
backend/tests/: conftest.py  test_admin_rbac.py  test_app.py  test_auth_identity.py  test_billing.py  test_graph_postgres.py  test_logging.py  test_memory_tenant.py  test_multi_agent.py  test_quota.py  test_sandbox.py  test_telemetry_otlp.py  test_tools.py
clients/go-client/: .dockerignore  Dockerfile  README.md  buf.gen.yaml  go.mod
clients/go-client/agent/: client.go  client_test.go  sse.go
clients/go-client/cmd/example/: main.go
clients/go-client/internal/server/: server.go
clients/go-client/proto/taotao/agent/v1/: agent.pb.go  agent.proto
clients/go-client/proto/taotao/agent/v1/agentv1connect/: agent.connect.go
deploy/nginx/: taotao.conf.example
docs/: agent-coding.html  agent-debugging.html  agent-design.html  agentic-ux.html  background-agents.html  behavioral.html  benchmarks.html  enterprise.html  eval-observability.html  eval-report.html  harness-vs-graph.html  harness.html  hermes.html  implementation.html  index.html  industrial.html  infra.html  langgraph-internals.html  learn.html  mcp.html  memory-context.html  multi-agent.html  multimodal-voice.html  p1-hardening.html  post-training.html  rag-production.html  saas.html  safety.html  tool-design.html
docs/_assets/: mermaid-init.html
frontend/: Dockerfile.prod  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  apiClient.ts  auth.ts  i18n.tsx  main.tsx  prompts.ts  styles.css  useAuth.ts  vite-env.d.ts
frontend/src/api/: index.ts  schema.gen.ts
frontend/src/components/: AuthGate.tsx  ChatPanel.tsx  EngineToggle.tsx  ExamplePrompts.tsx  LangToggle.tsx  LoginPanel.tsx  MarkdownBubble.tsx  ModelPicker.tsx  Sidebar.tsx  TokenMeter.tsx  TracePanel.tsx
