[project]
name = "agent-demo-backend"
version = "0.1.0"
description = "Production-shape agent demo with all 6+4 components on LangGraph 0.6"
requires-python = ">=3.11"
dependencies = [
    # --- core agent stack ---
    "langgraph>=0.6.0",
    "langchain>=0.3.20",
    "langchain-core>=0.3.40",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.2.0",
    # --- memory ---
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3.0",
    # pin: onnxruntime 1.26 has no macos-arm64 wheel as of May 2026
    "onnxruntime<1.26",
    # --- tools ---
    "duckduckgo-search>=6.3.0",
    "numexpr>=2.10.0",
    # --- api ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    # --- utils ---
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    # --- security: auth / rate-limit / sentry ---
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.18.0",
    # --- observability: OpenTelemetry + Prometheus ---
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "ddgs>=9.14.2",
    "mcp[cli]>=1.27.1",
    "langchain-mcp-adapters>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
