[project]
name = "agent-demo-backend"
version = "0.1.0"
description = "Production-shape agent demo with all 6+4 components on LangGraph 0.6"
requires-python = ">=3.11"
dependencies = [
    # --- core agent stack ---
    "langgraph>=0.6.0",
    "langchain>=0.3.20",
    "langchain-core>=0.3.40",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.2.0",
    # --- memory ---
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3.0",
    # pin: onnxruntime 1.26 has no macos-arm64 wheel as of May 2026
    "onnxruntime<1.26",
    # --- tools ---
    "duckduckgo-search>=6.3.0",
    "numexpr>=2.10.0",
    # --- api ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    # --- utils ---
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    # --- security: auth / rate-limit / sentry ---
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.18.0",
    # --- observability: OpenTelemetry + Prometheus ---
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    # Postgres checkpointer · used when DATABASE_URL is set (production).
    # Falls back to SqliteSaver in dev.  See agent/graph.py:_postgres_dsn.
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    # Stripe metered billing · used only when STRIPE_API_KEY is set.
    # Lazy-imported so unrelated paths (Ollama-only / CI / tests) don't pay it.
    "stripe>=11.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "ddgs>=9.14.2",
    "mcp[cli]>=1.27.1",
    "langchain-mcp-adapters>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pyjwt[crypto]>=2.12.1",  # used by agent.auth + tested in tests/test_auth.py
]

[tool.uv]
package = false

# ----------------------------------------------------------------- ruff
# Linter + formatter · run via `ruff check .` and `ruff format .` ·
# matches the same config CI runs (.github/workflows/test.yml).  We
# stay light on rules to avoid bikeshedding · just catch real bugs.
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "data",          # generated · chroma + sqlite + traces
  ".venv",
  "**/__pycache__",
]

[tool.ruff.lint]
# E + F = pyflakes/pycodestyle real bugs · I = isort · UP = pyupgrade ·
# B = flake8-bugbear (real-bug catches) · we skip stylistic-only rules.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",   # line-length · enforced by formatter where it matters
  "B008",   # function-call-in-default-argument · FastAPI Depends() needs this
  "RUF012", # mutable-class-attr · langchain tool decorators trip this
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM", "RUF"]  # tests can be loose
"agent/multi_agent/**" = [
  "UP",      # `from typing import` style preserved on purpose
  "RUF001",  # multi_agent regex intentionally accept Chinese punctuation (：)
  "RUF002",  # multi_agent docstrings use × for multiplication on purpose
  "RUF003",
]

# ----------------------------------------------------------------- mypy
# We run mypy ONLY on the new strict-typed surfaces (auth · multi-tenant
# memory · multi-agent types).  The legacy graph/harness code has 1k+
# untyped lines from langchain · running strict on those would drown
# real signal.  Add files here as you tighten them.
[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = false  # legacy code triggers many · only check files we explicitly own
warn_redundant_casts = true
no_implicit_optional = true
follow_imports = "silent"  # don't recurse into untyped legacy modules
files = [
  "agent/auth/**/*.py",
  "agent/multi_agent/types.py",
]

[[tool.mypy.overrides]]
module = ["jwt.*", "chromadb.*", "langgraph.*", "langchain.*", "langchain_core.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------- pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
addopts = "-q --strict-markers --tb=short"
